Fixed block tone alignment and SVG styles

--- a/src/components/block-styles-control/editor.scss
+++ b/src/components/block-styles-control/editor.scss
@@ -20,6 +20,8 @@ body.maxi-blocks--active {
 			padding: 5px 10px;
 			text-transform: capitalize;
 			height: 32px;
+			display: flex;
+			align-items: center;
 		}
 	}
 }
