--- a/src/components/setting-tabs-control/editor.scss
+++ b/src/components/setting-tabs-control/editor.scss
@@ -188,6 +188,7 @@
 		position: relative;
 		min-width: 100px;
 		margin-left: 10px;		
+		height: 32px;
 	}
 	.block-style-label-2,
 	.maxi-base-control__label {
